--- a/m5-thisburger/package.json
+++ b/m5-thisburger/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-filter-search": "^1.1.11",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "react-use-cart": "^1.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
